// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcBtnDropdown should emit a click event when the CTA button is clicked 1`] = `
<button
  class="ec-btn-dropdown__btn ec-btn ec-btn--md ec-btn--rounded ec-btn--primary ec-btn--primary-reverse"
  data-test="ec-btn-dropdown__btn ec-btn"
  type="button"
>
  <!--v-if-->
  <span
    class="ec-btn__text"
    data-test="ec-btn__text"
  >
    
    Convert & Pay
    
  </span>
  <!--v-if-->
</button>
`;

exports[`EcBtnDropdown should render as expected 1`] = `
<div
  class="ec-btn-dropdown"
  data-test="ec-btn-dropdown"
>
  <button
    class="ec-btn-dropdown__btn ec-btn ec-btn--md ec-btn--rounded ec-btn--primary ec-btn--primary-reverse"
    data-test="ec-btn-dropdown__btn ec-btn"
    type="button"
  >
    <!--v-if-->
    <span
      class="ec-btn__text"
      data-test="ec-btn__text"
    >
      
      Convert & Pay
      
    </span>
    <!--v-if-->
  </button>
  <div
    class="ec-dropdown-search"
    data-test="ec-dropdown-search"
  >
    <ec-stub
      autosize="min"
      class="ec-dropdown-search__trigger"
      data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
      disabled="false"
      distance="8"
      placement="bottom-end"
      popperclass="ec-dropdown-search__popover"
      shift="false"
      shown="false"
    >
      
      
      <button
        class="ec-btn-dropdown__dropdown-btn ec-btn ec-btn--md ec-btn--rounded ec-btn--icon-only ec-btn--primary ec-btn--primary-reverse"
        data-test="ec-btn-dropdown__dropdown-btn ec-btn"
        type="submit"
      >
        <svg
          class="ec-icon ec-btn__icon"
          data-test="ec-btn__icon"
          height="22"
          width="22"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      
      
      
      <div>
        <ul
          class="ec-dropdown-search__item-list"
          data-test="ec-dropdown-search__item-list"
        >
          <!--v-if-->
          <!--v-if-->
          
          
          
          
        </ul>
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcBtnDropdown should render with a 'to' prop 1`] = `
<button
  class="ec-btn-dropdown__btn ec-btn ec-btn--md ec-btn--rounded ec-btn--primary ec-btn--primary-reverse"
  data-test="ec-btn-dropdown__btn ec-btn"
  type="button"
>
  <!--v-if-->
  <span
    class="ec-btn__text"
    data-test="ec-btn__text"
  >
    
    Convert & Pay
    
  </span>
  <!--v-if-->
</button>
`;

exports[`EcBtnDropdown should render with a list of options on the dropdown search 1`] = `
<div
  class="ec-btn-dropdown"
  data-test="ec-btn-dropdown"
>
  <button
    class="ec-btn-dropdown__btn ec-btn ec-btn--md ec-btn--rounded ec-btn--primary ec-btn--primary-reverse"
    data-test="ec-btn-dropdown__btn ec-btn"
    type="button"
  >
    <!--v-if-->
    <span
      class="ec-btn__text"
      data-test="ec-btn__text"
    >
      
      Convert & Pay
      
    </span>
    <!--v-if-->
  </button>
  <div
    class="ec-dropdown-search"
    data-test="ec-dropdown-search"
  >
    <ec-stub
      autosize="min"
      class="ec-dropdown-search__trigger"
      data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
      disabled="false"
      distance="8"
      placement="bottom-end"
      popperclass="ec-dropdown-search__popover"
      shift="false"
      shown="false"
    >
      
      
      <button
        class="ec-btn-dropdown__dropdown-btn ec-btn ec-btn--md ec-btn--rounded ec-btn--icon-only ec-btn--primary ec-btn--primary-reverse"
        data-test="ec-btn-dropdown__dropdown-btn ec-btn"
        type="submit"
      >
        <svg
          class="ec-icon ec-btn__icon"
          data-test="ec-btn__icon"
          height="22"
          width="22"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      
      
      
      <div>
        <ul
          class="ec-dropdown-search__item-list"
          data-test="ec-dropdown-search__item-list"
        >
          <!--v-if-->
          <!--v-if-->
          
          
          <li
            class="ec-dropdown-search__item"
            data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
            title="Spot"
          >
            
            <ec-stub
              class="ec-btn-dropdown__item-link"
              data-test="ec-stub router-link-stub"
            >
              
              Spot
              
            </ec-stub>
            
          </li>
          <li
            class="ec-dropdown-search__item"
            data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
            title="Convert"
          >
            
            <ec-stub
              class="ec-btn-dropdown__item-link"
              data-test="ec-stub router-link-stub"
            >
              
              Convert
              
            </ec-stub>
            
          </li>
          
          
        </ul>
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcBtnDropdown should render with both buttons disabled 1`] = `
<div
  class="ec-btn-dropdown"
  data-test="ec-btn-dropdown"
>
  <button
    class="ec-btn-dropdown__btn ec-btn ec-btn--md ec-btn--rounded ec-btn--primary ec-btn--primary-reverse"
    data-test="ec-btn-dropdown__btn ec-btn"
    disabled=""
    type="button"
  >
    <!--v-if-->
    <span
      class="ec-btn__text"
      data-test="ec-btn__text"
    >
      
      Convert & Pay
      
    </span>
    <!--v-if-->
  </button>
  <div
    class="ec-dropdown-search"
    data-test="ec-dropdown-search"
  >
    <ec-stub
      autosize="min"
      class="ec-dropdown-search__trigger"
      data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
      disabled="true"
      distance="8"
      placement="bottom-end"
      popperclass="ec-dropdown-search__popover"
      shift="false"
      shown="false"
    >
      
      
      <button
        class="ec-btn-dropdown__dropdown-btn ec-btn ec-btn--md ec-btn--rounded ec-btn--icon-only ec-btn--primary ec-btn--primary-reverse"
        data-test="ec-btn-dropdown__dropdown-btn ec-btn"
        disabled=""
        type="submit"
      >
        <svg
          class="ec-icon ec-btn__icon"
          data-test="ec-btn__icon"
          height="22"
          width="22"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      
      
      
      <div>
        <ul
          class="ec-dropdown-search__item-list"
          data-test="ec-dropdown-search__item-list"
        >
          <!--v-if-->
          <!--v-if-->
          
          
          
          
        </ul>
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcBtnDropdown should use given list-data-test prop 1`] = `
<ul
  class="ec-dropdown-search__item-list"
  data-test="ec-dropdown-search__item-list my-test-list"
>
  <!--v-if-->
  <!--v-if-->
  
  
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
    title="Spot"
  >
    
    <ec-stub
      class="ec-btn-dropdown__item-link"
      data-test="ec-stub router-link-stub"
    >
      
      Spot
      
    </ec-stub>
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
    title="Convert"
  >
    
    <ec-stub
      class="ec-btn-dropdown__item-link"
      data-test="ec-stub router-link-stub"
    >
      
      Convert
      
    </ec-stub>
    
  </li>
  
  
</ul>
`;

exports[`EcBtnDropdown when the CTA menu item is disabled should be a non clickable DOM element 1`] = `
<li
  class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
  data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
  title="Convert & Pay"
>
  
  <span>
    Convert & Pay
  </span>
  
</li>
`;
